--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,12 +2,43 @@
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import "../styles/global.css";
+import { ClientRouter } from "astro:transitions";
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <ClientRouter/>
+    <script is:inline>
+  function handleToggleClick() {
+    const el = document.documentElement;
+    const isDark = el.classList.toggle('dark');
+    localStorage.setItem('theme', isDark ? 'dark' : 'light');
+  }
+
+  function bindToggle() {
+    const btn = document.getElementById('themeToggle');
+    if (btn && !btn.hasAttribute('data-listener')) {
+      btn.addEventListener('click', handleToggleClick);
+      btn.setAttribute('data-listener', 'true');
+    }
+  }
+
+  document.addEventListener('astro:page-load', bindToggle);
+  document.addEventListener('astro:after-swap', bindToggle);
+
+  bindToggle();
+  </script> 
+    <script is:inline>
+    function applyTheme() {
+      localStorage.getItem('theme') === 'dark'
+        ? document.documentElement.classList.add('dark')
+        : document.documentElement.classList.remove('dark');
+    }
+    applyTheme();
+    document.addEventListener('astro:after-swap', applyTheme);
+  </script>
+  <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
@@ -16,13 +47,18 @@ import "../styles/global.css";
       href="https://fonts.bunny.net/css?family=ibm-plex-mono:400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css"
+    />
+
     <slot name="head" />
   </head>
-  <body class="zag-bg zag-text zag-transition font-mono">
+  <body class="zag-bg zag-text zag-transition font-mono zag-responsive-container w-full-vw">
     <Header />
-    <main>
-      <slot />
-    </main>
+      <main>
+        <slot />
+      </main>
     <Footer />
   </body>
 </html>
