--- a/src/components/common/Section.astro
+++ b/src/components/common/Section.astro
@@ -2,6 +2,6 @@
 const { class: className } = Astro.props;
 ---
 
-<section class:list={["p-4 max-w-2xl mx-auto", className]}>
+<section class:list={["max-w-2xl mx-auto", className]}>
   <slot />
 </section>
