--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -4,6 +4,7 @@ import type { ArticleFrontmatter } from "../lib/types";
 import Section from "../components/common/Section.astro";
 import Prose from "../components/Prose.astro";
 import Layout from "./Layout.astro";
+import '../styles/global.css'
 
 type Props = { frontmatter: ArticleFrontmatter };
 
@@ -56,7 +57,8 @@ const { data: config } = await getConfigurationCollection();
       href={`${config.site.baseUrl}/blog/${frontmatter.slug}`}
     />
   </Fragment>
-  <Section class="pt-8">
+  <Section class="pt-8 zag-responsive-text max-w-none">
+    <div class="blog-content">
     <div class="flex flex-col gap-4 mt-8 mb-16">
       <h1
         class="text-3xl sm:text-4xl leading-normal sm:leading-normal font-display"
@@ -71,6 +73,7 @@ const { data: config } = await getConfigurationCollection();
     <Prose>
       <slot />
     </Prose>
-    <p class="pt-8">~{config.personal.name}</p>
+    <p class="pt-8 placeholder-zag-dark-opaque">~{config.personal.name}</p>
+    </div>
   </Section>
 </Layout>
