--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -5,7 +5,6 @@ import Prose from "../components/Prose.astro";
 import Layout from "./Layout.astro";
 import Section from "../components/common/Section.astro";
 import Anchor from "../components/common/Anchor.astro";
-
 type Props = { frontmatter: ProjectFrontmatter };
 
 const { frontmatter } = Astro.props;
@@ -56,11 +55,12 @@ const { data: config } = await getConfigurationCollection();
       href={`${config.site.baseUrl}/projects/${frontmatter.slug}`}
     />
   </Fragment>
-  <Section class="mt-8">
-    <div class="flex flex-col gap-4 mt-8 mb-16">
-      <h1 class="text-3xl sm:text-4xl leading-tight font-display">
-        {frontmatter.title}
-      </h1>
+  <Section class="pt-8 zag-responsive-text wide-width">
+    <div class="project-content">
+      <div class="flex flex-col gap-4 mt-8 mb-16">
+        <h1 class="text-3xl sm:text-4xl leading-tight font-display">
+          {frontmatter.title}
+        </h1>
       <div class="flex text-sm gap-2">
         {
           frontmatter.tags
@@ -72,7 +72,7 @@ const { data: config } = await getConfigurationCollection();
             : null
         }
       </div>
-      <div class="flex gap-2">
+      <div class="flex gap-2 zag-flex-grid">
         {
           frontmatter.githubUrl ? (
             <Anchor url={frontmatter.githubUrl} class="text-base" external>
@@ -92,5 +92,6 @@ const { data: config } = await getConfigurationCollection();
     <Prose>
       <slot />
     </Prose>
+    </div>
   </Section>
 </Layout>
