--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -2,6 +2,8 @@
 import { getCollection, render } from "astro:content";
 import BlogLayout from "../../layouts/BlogLayout.astro";
 import { getConfigurationCollection } from "../../lib/utils";
+import Gist from "@kotosha/astro-gist"
+import "../../styles/global.css"
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
@@ -25,5 +27,5 @@ const { Content } = await render(article);
 ---
 
 <BlogLayout frontmatter={article.data}>
-  <Content />
+  <Content components={{Gist}}/>
 </BlogLayout>
