--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,8 +10,8 @@ const { data: config } = await getConfigurationCollection();
   <div
     class="zag-bg zag-transition sm:hidden relative z-50 py-4 flex items-center"
   >
-    <button class="px-4" aria-label="Toggle navigation menu">
-      <svg
+  <button id="mobileNavBtn" class="px-4" aria-label="Toggle navigation menu">
+    <svg
         xmlns="http://www.w3.org/2000/svg"
         width="32"
         height="32"
@@ -23,7 +23,7 @@ const { data: config } = await getConfigurationCollection();
     </button>
   </div>
   <nav
-      class="zag-bg zag-transition w-auto fixed sm:relative inset-x-0 top-0 h-auto sm:px-4 flex justify-items-stretch flex-col gap-8 py-4 text-xl sm:flex-row max-w-2xl mx-auto sm:pt-4 sm:border-none"
+      id="siteNav" class="zag-bg zag-transition w-auto fixed sm:relative inset-x-0 top-0 h-auto sm:px-4 flex justify-items-stretch flex-col gap-8 py-4 text-xl sm:flex-row max-w-2xl mx-auto sm:pt-4 sm:border-none"
   >
     <div
       class="flex flex-col font-mono font-medium gap-4 sm:flex-row px-4 sm:px-0 mt-16 sm:mt-0"
@@ -59,8 +59,8 @@ const { data: config } = await getConfigurationCollection();
 </header>
 
 <script>
-  const button = document.querySelector("button");
-  const nav = document.querySelector("nav");
+  const button = document.getElementById("mobileNavBtn");
+  const nav = document.getElementById("siteNav");
   let isOpen = false;
 
   function updateNavState() {
