--- a/src/components/ProjectSnippet.astro
+++ b/src/components/ProjectSnippet.astro
@@ -38,13 +38,13 @@ const { title, description, url, githubUrl, liveUrl, tags } = Astro.props;
   <p class="zag-text zag-transition">
     {description}
   </p>
-  <div class="flex flex-row wrap gap-2">
-    {
-      tags.map((tag) => (
-        <span class="-zag-text -zag-bg zag-transition px-2 py-1 text-sm font-semibold">
-          {tag}
-        </span>
-      ))
-    }
+
+  <div class="flex flex-row flex-nowrap overflow-x-auto gap-2 pb-2">
+    {tags.map((tag) => (
+      <span class="flex-shrink-0 -zag-text -zag-bg zag-transition px-2 py-1 text-sm font-semibold">
+        {tag}
+      </span>
+    ))}
   </div>
+
 </div>
