Readability enhancement, fonts, spacing, alignment and mobile optimization

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,9 +8,9 @@ const { data: config } = await getConfigurationCollection();
 const date = new Date();
 const year = date.getFullYear();
 ---
-
 <footer class="zag-footer mt-16 mb-8">
   <Section class="mb-4">
+    <div class="zag-border-b"></div>
     <div
       class="zag-border-b zag-transition pb-4 flex flex-col sm:flex-row sm:flex-nowrap gap-8 sm:items-center"
     >
