--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,7 +75,7 @@ import { ClientRouter } from "astro:transitions";
 
     <slot name="head" />
   </head>
-  <body class="zag-bg zag-text zag-transition font-mono zag-responsive-container w-full-vw">
+  <body class="zag-bg zag-text zag-transition zag-responsive-container w-full-vw">
     <Header />
       <main>
         <slot />
