--- a/src/components/home/FeaturedProjects.astro
+++ b/src/components/home/FeaturedProjects.astro
@@ -11,7 +11,7 @@ type Props = {
 const { featuredProjects } = Astro.props;
 const { data: config } = await getConfigurationCollection();
 ---
-
+<div class="zag-border-b w-full"></div>
 <div class="flex justify-between items-center w-full">
   <h3 class="font-display text-lg sm:text-xl leading-loose">{config.texts.projectsName}</h3>
   <Anchor url="/projects" class="text-base">{config.texts.viewAll}</Anchor>
