--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -61,7 +61,7 @@ const { data: config } = await getConfigurationCollection();
         <h1 class="text-3xl sm:text-4xl leading-tight font-display">
           {frontmatter.title}
         </h1>
-      <div class="flex text-sm gap-2">
+      <div class="flex flex-wrap text-sm gap-2">
         {
           frontmatter.tags
             ? frontmatter.tags.map((tag) => (
@@ -89,7 +89,7 @@ const { data: config } = await getConfigurationCollection();
         }
       </div>
     </div>
-    <Prose>
+    <Prose class="font-serif">
       <slot />
     </Prose>
     </div>
